sTimetable section done

--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -8,6 +8,7 @@ include ../blocks/headerBlock/_headerBlock.pug
 //- include ../blocks/sContent/_sContent.pug
  
 include ../blocks/sContact/_sContact.pug
+include ../blocks/sTimetable/_sTimetable.pug
 //- include ../blocks/sProcedure/_sProcedure.pug
 include ../blocks/sCases/_sCases.pug
 include ../blocks/sPrize/_sPrize.pug
@@ -39,6 +40,7 @@ block pagecontent
 		+sAbout()
 		+sTeam()
 		//- +sProcedure()
+		+sTimetable()
 		+sCases()
 		+sPrize()
 		+sCoworkings
