--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -86,7 +86,7 @@
 		@include media-breakpoint-up(xxl) {
 			left: 123%;
 		}
-
+		display: none;
 		margin-top: 20px;
 		width: 65%;
 		position: relative;
@@ -155,7 +155,59 @@
 		--bs-btn-disabled-color: #000;
 		--bs-btn-disabled-opacity: 1;
 	}
-
+	&__video-wrap {
+		@include block(714, 401);
+		display: none;
+		margin-bottom: rem(30);
+		&.active {
+			display: block;
+		}
+		& > * {
+			position: absolute;
+			display: block;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+		}
+		@include media-breakpoint-up(sm) {
+			position: absolute;
+			left: 100%;
+			// top: rem(-30);
+			width: rem(714);
+			// margin-top: -5%;
+			margin-bottom: 0;
+		}
+		@include media-breakpoint-up(xxl) {
+			left: 100%;
+		}
+		&::after {
+			content: "";
+			position: absolute;
+			display: block;
+			z-index: -1;
+			--left: 10%;
+			// width: calc(150% + var(--left));
+			width: 50%;
+			height: 140%;
+			// height: calc(100%  + var(--left));
+			// padding-bottom: 150%;
+			// left: calc(-1 *  var(--left));
+			top: 0;
+			left: -21%;
+			// margin-top: 5%;
+			background-repeat: no-repeat;
+			// top: 0;
+			@include a-cent1(y);
+			background-image: url(../img/video-bg.png);
+			background-size: contain;
+			background-size: cover;
+			@include media-breakpoint-up(sm) {
+				width: rem(787);
+				height: rem(569);
+			}
+		}
+	}
 	@include media-breakpoint-up(xl) {
 	}
 
