--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -8,8 +8,8 @@ mixin headerBlock()
 
 				+e.img-wrap
 					+pic("head-img.png")
-				+e.video-wrap.active
-					<iframe src="https://www.youtube.com/embed/h9JlDh7X7eo" title="Fireplace at Night 4K 🔥 Cozy Fireplace (12 HOURS). Fireplace video with Burning Logs &amp; Fire Sounds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				+e.video-wrap
+					//- <iframe src="" title="Fireplace at Night 4K 🔥 Cozy Fireplace (12 HOURS). Fireplace video with Burning Logs &amp; Fire Sounds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				h1 Молодёжный бит
 				p Всероссийский хакатон <br> для талантливых IT-специалистов
 				ul
