Updated links in pug

--- a/sourse/pug/blocks/sTimetable/_sTimetable.pug
+++ b/sourse/pug/blocks/sTimetable/_sTimetable.pug
@@ -14,21 +14,24 @@ mixin sTimetable(data)
 								small!= day
 							ul
 								block
-				mixin li(time, event, descr)
+				mixin li(time, event, descr, link)
 						li
 							span!= time
 							+e.event
-								span!= event
+								if link
+									a(href=link)!= event
+								else
+									span!= event
 								if descr
 									p!= descr
 				+day(`17 февраля 2023`, `Пятница`)
-					+li(`16:00—17:00`, `Торжественное открытие`)
+					+li(`16:00—17:00`, `Торжественное открытие`, ``, `https://vk.com/rosmolodez?z=video-49388164_456240671%2F0c24c8e9ed6c36b598%2Fpl_wall_-49388164`)
 					+li(`18:00—21:40`, `Первый чек-поинт`)
 				+day(`18 февраля 2023`, `Суббота`)
 					+li(`10:00—13:40`, `Второй чек-поинт`, `К началу 2-го чек-поинта команда должна показать, как минимум, ссылку на репозиторий.`)
-					+li(`18:00—20:40`, `Третий чек-поинт`, `К старту 3-го чек-поинта,в целях осуществления контроляза прогрессом, команда должна загрузить: драфт тизера решения, ссылку на репозиторий с кодом, драфт презентации.`)
+					+li(`17:00—20:40`, `Третий чек-поинт`, `К старту 3-го чек-поинта,в целях осуществления контроляза прогрессом, команда должна загрузить: драфт тизера решения, ссылку на репозиторий с кодом, драфт презентации.`)
 				+day(`19 февраля 2023`, `Воскресенье`)
 					+li(`10:00`, `Стоп-кодинг`)
-					+li(`12:00—18:00`, `Защита решений`)
-					+li(`18:00—19:00`, `Торжественное награждение победителей`)
+					+li(`12:00—18:00`, `Защита решений`, ``, `https://vk.com/rosmolodez.business?z=video-130482053_456240091%2Fvideos-130482053%2Fpl_-130482053_-2`)
+					+li(`18:00—19:00`, `Торжественное награждение победителей`, ``, `https://vk.com/video-49388164_456240673`)
 	// end sTimetable
