--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -47,14 +47,14 @@ mixin sCases(data)
 										
 								.swiper-pagination
 								// - tabs__links скрыт классом .d-none
-								.tabs__links.d-none
-									a(href="#").tabs__content-link
-										+icon('sCases-video')
-										span Видеоинтервью
-									a(href="#").tabs__content-link
-										+icon('sCases-project')
-										span Презентация кейса
-									a(href="#").tabs__content-link
+								.tabs__links
+									//- a(href="#").tabs__content-link
+									//- 	+icon('sCases-video')
+									//- 	span Видеоинтервью
+									//- a(href="#").tabs__content-link
+									//- 	+icon('sCases-project')
+									//- 	span Презентация кейса
+									a(href="/shortlist.html").tabs__content-link
 										+icon('sContact-win')
 										span Победители и&nbsp;призеры
 					.tabs__content
@@ -88,14 +88,14 @@ mixin sCases(data)
 										
 								.swiper-pagination
 								// - tabs__links скрыт классом .d-none
-								.tabs__links.d-none
-									a(href="#").tabs__content-link
-										+icon('sCases-video')
-										span Видеоинтервью
-									a(href="#").tabs__content-link
-										+icon('sCases-project')
-										span Презентация кейса
-									a(href="#").tabs__content-link
+								.tabs__links
+									//- a(href="#").tabs__content-link
+									//- 	+icon('sCases-video')
+									//- 	span Видеоинтервью
+									//- a(href="#").tabs__content-link
+									//- 	+icon('sCases-project')
+									//- 	span Презентация кейса
+									a(href="/shortlist.html").tabs__content-link
 										+icon('sContact-win')
 										span Победители и&nbsp;призеры
 					.tabs__content
@@ -125,14 +125,14 @@ mixin sCases(data)
 										
 								.swiper-pagination
 								// - tabs__links скрыт классом .d-none
-								.tabs__links.d-none
-									a(href="#").tabs__content-link
-										+icon('sCases-video')
-										span Видеоинтервью
-									a(href="#").tabs__content-link
-										+icon('sCases-project')
-										span Презентация кейса
-									a(href="#").tabs__content-link
+								.tabs__links
+									//- a(href="#").tabs__content-link
+									//- 	+icon('sCases-video')
+									//- 	span Видеоинтервью
+									//- a(href="#").tabs__content-link
+									//- 	+icon('sCases-project')
+									//- 	span Презентация кейса
+									a(href="/shortlist.html").tabs__content-link
 										+icon('sContact-win')
 										span Победители и&nbsp;призеры
 					.tabs__content
@@ -177,14 +177,14 @@ mixin sCases(data)
 												+e.title Больше, чем путешествие
 								.swiper-pagination
 								// - tabs__links скрыт классом .d-none
-								.tabs__links.d-none
-									a(href="#").tabs__content-link
-										+icon('sCases-video')
-										span Видеоинтервью
-									a(href="#").tabs__content-link
-										+icon('sCases-project')
-										span Презентация кейса
-									a(href="#").tabs__content-link
+								.tabs__links
+									//- a(href="#").tabs__content-link
+									//- 	+icon('sCases-video')
+									//- 	span Видеоинтервью
+									//- a(href="#").tabs__content-link
+									//- 	+icon('sCases-project')
+									//- 	span Презентация кейса
+									a(href="/shortlist.html").tabs__content-link
 										+icon('sContact-win')
 										span Победители и&nbsp;призеры
 
