--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -55,7 +55,7 @@ mixin page-head(t)
 	+b.page-head
 		.container
 			+e.title
-				+e.btn-back(href="#")
+				+e.btn-back(href="/")
 					+icon('btn-back')
 				h1!= t
 
