--- a/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
+++ b/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
@@ -3,107 +3,62 @@ mixin sBestTeams(data)
 	+b.sBestTeams.section#sBestTeams&attributes(attributes)
 		.container
 			.tabs
+				script
+					include script.js
 				.tabs__caption
-					.tabs__btn
-						span Дашборд
 					.tabs__btn.active
+						span Дашборд
+					.tabs__btn
 						span Цифровой помощник
 					.tabs__btn
 						span Онбординг
 					.tabs__btn
 						span Молодёжный туризм
 				.tabs__wrap
-					.tabs__content
+					.tabs__content#onboarding.active
 						.tabs__content-wrap
 							.tabs__title
 								h4 Дашборд
 								p Разработай дашборд – инструмент анализа и визуализации данных,поступающих от субъектов молодёжной политики России
 							+e.list
 								h4 Победители
-								+e.row.row
-									.col-12.col-lg-4
-										+sBestTeamsItem(`I`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--first
-									.col-12.col-lg-4
-										+sBestTeamsItem(`II`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--second
-									.col-12.col-lg-4
-										+sBestTeamsItem(`III`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--third
+								+e.row.row.first
 							+e.list
 								h4 Шортлист
-								+e.row.row
-									.col-12.col-lg-4
-										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-									.col-12.col-lg-4
-										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-									.col-12.col-lg-4
-										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-					.tabs__content.active
+								+e.row.row.other
+					.tabs__content#tourism
 						.tabs__content-wrap
 							.tabs__title
 								h4 Цифровой помощник
 								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
 							+e.list
 								h4 Победители
-								+e.row.row
-									.col-12.col-lg-4
-										+sBestTeamsItem(`I`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--first
-									.col-12.col-lg-4
-										+sBestTeamsItem(`II`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--second
-									.col-12.col-lg-4
-										+sBestTeamsItem(`III`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--third
+								+e.row.row.first
 							+e.list
 								h4 Шортлист
-								+e.row.row
-									.col-12.col-lg-4
-										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-									.col-12.col-lg-4
-										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-									.col-12.col-lg-4
-										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-					.tabs__content
+								+e.row.row.other
+					.tabs__content#dashboard
 						.tabs__content-wrap
 							.tabs__title
 								h4 Онбординг
 								p Разработай digital-систему для онбординга новых сотрудниковс элементами геймификации
 							+e.list
 								h4 Победители
-								+e.row.row
-									.col-12.col-lg-4
-										+sBestTeamsItem(`I`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--first
-									.col-12.col-lg-4
-										+sBestTeamsItem(`II`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--second
-									.col-12.col-lg-4
-										+sBestTeamsItem(`III`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--third
+								+e.row.row.first
+									 
 							+e.list
 								h4 Шортлист
-								+e.row.row
-									.col-12.col-lg-4
-										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-									.col-12.col-lg-4
-										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-									.col-12.col-lg-4
-										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-					.tabs__content
+								+e.row.row.other
+								 
+					.tabs__content#assistant
 						.tabs__content-wrap
 							.tabs__title
 								h4 Молодёжный туризм
 								p Разработай мобильное приложение для сайта студтуризм.рф
 							+e.list
 								h4 Победители
-								+e.row.row
-									.col-12.col-lg-4
-										+sBestTeamsItem(`I`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--first
-									.col-12.col-lg-4
-										+sBestTeamsItem(`II`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--second
-									.col-12.col-lg-4
-										+sBestTeamsItem(`III`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--third
+								+e.row.row.first
 							+e.list
 								h4 Шортлист
-								+e.row.row
-									.col-12.col-lg-4
-										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-									.col-12.col-lg-4
-										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-									.col-12.col-lg-4
-										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-
+								+e.row.row.other
 	// end sBestTeams
