--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -17,5 +17,5 @@ mixin headerBlock()
 					li Участвуй онлайн из&nbsp;любой точки страны
 					li Приходи кодить на&nbsp;офлайн-площадку
 					//- li Регистрируйся до&nbsp;14&nbsp;февраля
-				+e.btn.btn.btn-success.disabled(href="https://lk.youthbit.ru/") Регистрация завершена
+				+e.btn.btn.btn-primary(href="/shortlist.html") ПОБЕДИТЕЛИ
 	// end headerBlock
