--- a/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
+++ b/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
@@ -15,7 +15,7 @@ mixin sBestTeams(data)
 					.tabs__btn
 						span Молодёжный туризм
 				.tabs__wrap
-					.tabs__content#onboarding.active
+					.tabs__content#dashboard.active
 						.tabs__content-wrap
 							.tabs__title
 								h4 Дашборд
@@ -26,7 +26,7 @@ mixin sBestTeams(data)
 							+e.list
 								h4 Шортлист
 								+e.row.row.other
-					.tabs__content#tourism
+					.tabs__content#assistant
 						.tabs__content-wrap
 							.tabs__title
 								h4 Цифровой помощник
@@ -37,7 +37,7 @@ mixin sBestTeams(data)
 							+e.list
 								h4 Шортлист
 								+e.row.row.other
-					.tabs__content#dashboard
+					.tabs__content#onboarding
 						.tabs__content-wrap
 							.tabs__title
 								h4 Онбординг
@@ -50,7 +50,7 @@ mixin sBestTeams(data)
 								h4 Шортлист
 								+e.row.row.other
 								 
-					.tabs__content#assistant
+					.tabs__content#tourism
 						.tabs__content-wrap
 							.tabs__title
 								h4 Молодёжный туризм
