--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -54,7 +54,7 @@ mixin sCases(data)
 									//- a(href="#").tabs__content-link
 									//- 	+icon('sCases-project')
 									//- 	span Презентация кейса
-									a(href="shortlist.html").tabs__content-link
+									a(href="shortlist.html#onboarding").tabs__content-link
 										+icon('sContact-win')
 										span Победители и&nbsp;призеры
 					.tabs__content
@@ -95,7 +95,7 @@ mixin sCases(data)
 									//- a(href="#").tabs__content-link
 									//- 	+icon('sCases-project')
 									//- 	span Презентация кейса
-									a(href="shortlist.html").tabs__content-link
+									a(href="shortlist.html#dashboard").tabs__content-link
 										+icon('sContact-win')
 										span Победители и&nbsp;призеры
 					.tabs__content
@@ -132,7 +132,7 @@ mixin sCases(data)
 									//- a(href="#").tabs__content-link
 									//- 	+icon('sCases-project')
 									//- 	span Презентация кейса
-									a(href="shortlist.html").tabs__content-link
+									a(href="shortlist.html#assistant").tabs__content-link
 										+icon('sContact-win')
 										span Победители и&nbsp;призеры
 					.tabs__content
@@ -184,7 +184,7 @@ mixin sCases(data)
 									//- a(href="#").tabs__content-link
 									//- 	+icon('sCases-project')
 									//- 	span Презентация кейса
-									a(href="shortlist.html").tabs__content-link
+									a(href="shortlist.html#tourism").tabs__content-link
 										+icon('sContact-win')
 										span Победители и&nbsp;призеры
 
