--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -48,9 +48,9 @@ mixin sCases(data)
 								.swiper-pagination
 								// - tabs__links скрыт классом .d-none
 								.tabs__links
-									//- a(href="#").tabs__content-link
-									//- 	+icon('sCases-video')
-									//- 	span Видеоинтервью
+									a(href="https://storage.yandexcloud.net/mp-hackathon/videos/onboarding-solutions.mp4").tabs__content-link
+										+icon('sCases-video')
+										span Защита решений по кейсу
 									//- a(href="#").tabs__content-link
 									//- 	+icon('sCases-project')
 									//- 	span Презентация кейса
@@ -89,9 +89,9 @@ mixin sCases(data)
 								.swiper-pagination
 								// - tabs__links скрыт классом .d-none
 								.tabs__links
-									//- a(href="#").tabs__content-link
-									//- 	+icon('sCases-video')
-									//- 	span Видеоинтервью
+									a(href="https://storage.yandexcloud.net/mp-hackathon/videos/dashboard-solutions.mp4" target="_blank").tabs__content-link
+										+icon('sCases-video')
+										span Защита решений по кейсу
 									//- a(href="#").tabs__content-link
 									//- 	+icon('sCases-project')
 									//- 	span Презентация кейса
@@ -126,9 +126,9 @@ mixin sCases(data)
 								.swiper-pagination
 								// - tabs__links скрыт классом .d-none
 								.tabs__links
-									//- a(href="#").tabs__content-link
-									//- 	+icon('sCases-video')
-									//- 	span Видеоинтервью
+									a(href="https://storage.yandexcloud.net/mp-hackathon/videos/assistant-solutions.mp4" target="_blank").tabs__content-link
+										+icon('sCases-video')
+										span Защита решений по кейсу
 									//- a(href="#").tabs__content-link
 									//- 	+icon('sCases-project')
 									//- 	span Презентация кейса
@@ -178,9 +178,9 @@ mixin sCases(data)
 								.swiper-pagination
 								// - tabs__links скрыт классом .d-none
 								.tabs__links
-									//- a(href="#").tabs__content-link
-									//- 	+icon('sCases-video')
-									//- 	span Видеоинтервью
+									a(href="https://storage.yandexcloud.net/mp-hackathon/videos/assistant-solutions.mp4" target="_blank").tabs__content-link
+										+icon('sCases-video')
+										span Защита решений по кейсу
 									//- a(href="#").tabs__content-link
 									//- 	+icon('sCases-project')
 									//- 	span Презентация кейса
